# LogManager

./: .gitignore  CMakeLists.txt  Clean.cpp  CreateFoldersAndFiles.cpp  DeleteOldFolder.cpp  README.md  Test.cpp  Utils.hpp  path.example.ini  test.cc
config/: path.example.ini
src/: CMakeLists.txt  DeleteOldFolder.cpp
src/include/: Utils.hpp
test/: CMakeLists.txt  Clean.cpp  CreateFoldersAndFiles.cpp  Test.cpp  test.cc  test_directories.cpp
